--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
 
 
 <!-- carousal  -->
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" style="height: 800px;">
-  <div class="carousel-inner" style="height: 400px;">
-    <div class="carousel-item active">
-      <img
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner" style="height: 800px;">
+    <div class="carousel-item active" style="height: 800px;">
+      <img style="height: 800px;"
         src="https://images.pexels.com/photos/10229156/pexels-photo-10229156.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         class="d-block w-100 h" alt="...">
     </div>
-    <div class="carousel-item">
-      <img
+    <div class="carousel-item" style="height: 800px;">
+      <img style="height: 800px;"
         src="https://images.pexels.com/photos/4590754/pexels-photo-4590754.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
         class="d-block w-100" alt="...">
 
     </div>
-    <div class="carousel-item">
-      <img src="https://images.pexels.com/photos/13691355/pexels-photo-13691355.jpeg" class="d-block w-100" alt="...">
+    <div class="carousel-item" style="height: 800px;">
+      <img style="height: 800px;" src="https://images.pexels.com/photos/13691355/pexels-photo-13691355.jpeg" class="d-block w-100" alt="...">
 
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
